--- a/src/config/config.ini
+++ b/src/config/config.ini
@@ -6,13 +6,5 @@ user=postgres
 password=mysecretpassword
 
 [DATA]
-city_weather_url=https://raw.githubusercontent.com/sekhar4ml/MLAppsData/main/truck_delay/city_weather.csv
-drivers_url=https://raw.githubusercontent.com/sekhar4ml/MLAppsData/main/truck_delay/drivers_table.csv
-routes_url=https://raw.githubusercontent.com/sekhar4ml/MLAppsData/main/truck_delay/routes_table.csv
-routes_weather_url=https://raw.githubusercontent.com/sekhar4ml/MLAppsData/main/truck_delay/routes_weather.csv
-traffic_url=https://raw.githubusercontent.com/sekhar4ml/MLAppsData/main/truck_delay/traffic_table.csv
-truck_schedule_url=https://raw.githubusercontent.com/sekhar4ml/MLAppsData/main/truck_delay/truck_schedule_table.csv
-trucks_url=https://raw.githubusercontent.com/sekhar4ml/MLAppsData/main/truck_delay/trucks_table.csv
-raw_data =/Users/rammaruthi/Desktop/Truck/data/raw
-cleaned_data = /Users/rammaruthi/Desktop/Truck/data/cleaned
-git_download = /Users/rammaruthi/Desktop/Truck/data/git_download
+source_url = https://api.github.com/repos/sekhar4ml/MLAppsData/contents/truck_delay
+
