--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,10 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out the code
-        uses: actions/checkout@v3 # Updated to latest version
+        uses: actions/checkout@v3 # Automatically compatible with Node 20
 
       - name: Set up Python
-        uses: actions/setup-python@v4 # Updated to latest version
+        uses: actions/setup-python@v4 # Automatically compatible with Node 20
         with:
           python-version: "3.12"
 
@@ -38,16 +38,27 @@ jobs:
           docker tag truck_delay_classification_app:latest 131362291480.dkr.ecr.us-east-1.amazonaws.com/truck/truck_delay_classification_app:latest
           docker push 131362291480.dkr.ecr.us-east-1.amazonaws.com/truck/truck_delay_classification_app:latest
 
-      - name: Remove unused Docker layers # Free up disk space
+      - name: Remove unused Docker layers
         run: docker system prune -f
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy to AWS ECS
+      - name: Authenticate Docker with AWS ECR
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          aws ecs update-service --cluster truck-delay-cluster --service truck-delay-service --force-new-deployment
+          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 131362291480.dkr.ecr.us-east-1.amazonaws.com
+
+      - name: Deploy to AWS ECS
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: us-east-1
+        run: |
+          aws ecs update-service --cluster truck-delay-cluster --service truck-delay-service --force-new-deployment --region $AWS_REGION
+
+      - name: Notify deployment success
+        run: echo "Deployment to ECS was successful."
