--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build Docker image
-        run: docker build -t truck_delay_classification_app .
+        run: docker build --no-cache -t truck_delay_classification_app .
 
       - name: Authenticate Docker with AWS ECR
         env:
