--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,6 +13,9 @@ jobs:
       - name: Check out the code
         uses: actions/checkout@v3
 
+      - name: Display `app.py` content
+        run: head -n 5 app.py
+
       - name: Build Docker image
         run: docker build --no-cache -t truck_delay_classification_app .
 
@@ -27,6 +30,11 @@ jobs:
         run: |
           docker tag truck_delay_classification_app:latest 131362291480.dkr.ecr.us-east-1.amazonaws.com/truck/truck_delay_classification_app:latest
           docker push 131362291480.dkr.ecr.us-east-1.amazonaws.com/truck/truck_delay_classification_app:latest
+
+      - name: Pull Docker image from ECR for verification
+        run: |
+          docker pull 131362291480.dkr.ecr.us-east-1.amazonaws.com/truck/truck_delay_classification_app:latest
+          docker run --rm 131362291480.dkr.ecr.us-east-1.amazonaws.com/truck/truck_delay_classification_app:latest head -n 5 app.py
 
       - name: Remove unused Docker layers
         run: docker system prune -f
